app/assets/stylesheets/style.css.scss
  $input-background: #ffffff;
  $border-default: 1px solid #cccccc;
  $green:#19DD89;
  $winter-green:#44932B;
  $blue:#2287e6;
  $other-blue:#2f87ed;
  $light-grey:#f7f7f7;
  $style: solid;
  /** resets **/
  body{
    background: white;
    font-family: "myriad-pro","Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 100;
    font-size: 16px;
  }
  p{
    font-family: "myriad-pro","Helvetica Neue", Helvetica, Arial, sans-serif;
  }
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-weight: normal;
  }
  label,
  input,
  button,
  select,
  textarea {
    font-size: 16px;
    font-weight: 100;
    line-height: 20px;
  }
  input,button,select,textarea,input.btn,button.btn,a.btn,a.win-command, button, input[type="button"], input[type="reset"], input[type="submit"]  {
    font-family: "museo-sans","Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 100;
    font-size: 16px;
  }
  label.checkbox input[type="checkbox"] ~ span.metro-checkbox::after {
    font-family: none;
  }
  /** navbar styles **/
  #navbar {
    background: #F0F0F0 url(../img/noise-f1.gif) repeat -70% 0;
  }

  .navbar {

    .navbar-inner{
     border: 0;

     -webkit-border-top-left-radius:0px;
     -moz-border-top-left-radius:0px;
     border-top-left-radius: 0px;
     -webkit-border-top-right-radius:0px;
     -moz-border-top-right-radius:0px;
     border-top-right-radius: 0px;

     -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
     -moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
     box-shadow: 0 2px 10px rgba(0,0,0,.25);
   }

   .brand{
    padding: 0px; /* Increase vertical padding to match navbar links */
    font-size: 18px;
    text-shadow: 0 -1px 0 rgba(0,0,0,.5);
  }
}

.navbar-wrapper {
  position: relative;
  z-index: 10;
  margin-bottom: -90px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
}

#remember-me{
  padding-left:3px;
  margin-left: 0px;
  input{
    margin-left:2px;
    margin-right:3px;
  }
}

#forgot-password{
  margin-left: 0px;
  padding-top:5px;
  margin-top: 5px;
  color:#777;
}


#header-container{
  display: block;
}

#main-nav-menu{
  padding-top:25px;
}

#second-nav{
  margin-top:25px;
}
/** Hero unit styles **/
.main-unit {     
  background-image: url(../img/noisy-texture.png);
  background-color: #4398F2;
  background-position: 50% 50%;
  background-repeat: repeat repeat;
  margin-top: -20px;
  margin-bottom: 60px;
  position: relative;
  width: 100%;
  overflow: hidden;

}


#take-a-mock-btn{
  font-size: 24px;
  padding-top: 40px;
  padding-bottom: 40px;
  padding-left: 15px;
  padding-right: 15px;
  text-align: center;
  display: block;
  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  border : 1px solid $other-blue;
}

#sign-up{
  margin-top: 10px;
  padding: 15px;
  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  border : 1px solid $other-blue;
}

/** content styles **/

.marketing {
  text-align: center;
  color: #5A5A5A;
  margin-top: 30px;
}
.marketing .marketing-byline {
  margin-bottom: 40px;
  font-size: 20px;
  font-weight: 300;
  line-height: 1.25;
  color: #999;
}
.test-list .command-btn {
  display: none;
}
#content{
  margin-top: 30px;
}

#action-bar{
  position: fixed;
  top: 0px;
  z-index: 1999;
  background-color: white;
  .span6{
    width: 500px;
  }
}

#test-content{

  .single{
    width:60%;
    margin: 0px auto;
    margin-top: 200px;
  }
  .question{
    padding-bottom: 10px;
    text-align:justify;
  }

  .instruction{
    text-align:justify;
  }
  .options{
    width:70%;
    margin:0px 50px;
    .form-horizontal .controls {
      margin-left: 10px;
    }
  }
  .left-pane{
    position: absolute;
    top: 250px;
    width:40%;
    left: 80px;
    bottom: 120px;

  }
  .right-pane{
    position: absolute;
    top: 250px;
    left: 50%;
    width: 40%;
    bottom: 120px;
    .options{
      width:100%;
      margin:0px -100px;
    }
  }

  .scroll-x { overflow-x: auto; }
  .scroll-y { overflow-y: auto; }
  .full-col { overflow: hidden; position: absolute; }
}

.fill, .pane { position: absolute; left: 0; top: 0; right: 0; bottom: 0; width: 100%; height: 100%; overflow:hidden;}


@media (min-width: 1200px){
  #test-content {
    .left-pane,.right-pane{
      top: 200px;
    }
  }
}
@media (max-width: 979px) and (min-width: 768px){
  #test-content {
    .left-pane,.right-pane{
      top: 250px;
    }
    .left-pane{
      width:40%;
      left: 80px;
    }
    .right-pane{
      left: 50%;
      width: 40%;
    }
  }
}

@media (max-width: 767px){
  #test-content {
    .left-pane,.right-pane{
      top: 250px;
    }
    .left-pane{
      width:45%;
    }
    .right-pane{
      left: 50%;
      width: 40%;
    }
  }
}

@media (max-width: 480px){
  #test-content {
    .left-pane,.right-pane{
      top: 250px;
    }
    .single{
      width: 70%;
      margin-top: 50%;
    }
    .left-pane{
      width:25%;
    }
    .right-pane{
      left: 30%;
      width: 20%;
    }
  }
}

#product-features{
  ul{
    list-style: none;
    margin-left: 0px;
    li{
      padding:5px;
    }
  }
}

#metrosections {
  background-color: #000;
  color: #fff;
  padding-top: 40px;
  padding-bottom: 40px;
  padding-right:20px;
  padding-left: 40px;
  width: 100%;
  overflow: auto;
}

.box{
  margin: 5px;
  padding: 10px;
  font-size: 12x;
  line-height: 1.4em;
  float: left;
  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  border : 1px solid #c5c5c5;
}

.pack-tile {
  display: block;
  margin: 5px;
  padding: 10px;
  width: 270px;
  height: 400px;
  color: white;
  cursor: pointer;
  overflow: hidden;
  text-decoration: none;
  background-color: #2C83EF;
  margin-right: 20px;
  position:relative;
}

.pack-tile h2{
  margin-top: 15px;
}

.pack-tile .prize{
  position: absolute;
  bottom: 0;
  left:0;
  width: 100%;
  text-align: right;

}

.pack-tile p{
  padding: 10px;
}
.green{
  background: $green;
}

.wired-blue{
  background: #3f4c6b; /* Old browsers */
  background: -moz-linear-gradient(top, #3f4c6b 0%, #3f4c6b 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3f4c6b), color-stop(100%,#3f4c6b)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top, #3f4c6b 0%,#3f4c6b 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top, #3f4c6b 0%,#3f4c6b 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top, #3f4c6b 0%,#3f4c6b 100%); /* IE10+ */
  background: linear-gradient(to bottom, #3f4c6b 0%,#3f4c6b 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f4c6b', endColorstr='#3f4c6b',GradientType=0 ); /* IE6-9 */
  color: #efefef;
}
.black {
  background: #45484d; /* Old browsers */
  color:#efefef;
}
.blue{
  background: #4096ee; /* Old browsers */
  color: #efefef;
}

.light-grey{
  background: $light-grey;
  border : 2px solid #ededed;
  color: black;
}

.blue-border{
  border: 1px solid $blue;
}
.simple {
  border : none;
  -moz-box-shadow: none;
  -webkit-box-shadow: none;
  box-shadow: none;
  -moz-border-radius: 0px;
  -webkit-border-radius: 0px;
  border-radius: 0px;
  color: black;
}

.title {
  font-size: 24px;
  font-weight: 300;
  margin-top: 15px;
  margin-bottom: 15px;
}

.test-list{
  list-style: none;
  margin: 0px;
}

#metrosections h3{
  margin-left: 5px;
  font-weight: 100;
}
#metrosections h4{
  margin-left: 5px;
  font-weight: 100;
}
.mediumListIconTextItem:hover{
  background-color: $light-grey;
  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  border : 1px solid grey;
}

.mediumListIconTextItem.new{
  border-left: 5px solid green;
}
.mediumListIconTextItem.pause{
  border-left: 5px solid $blue;
}
.mediumListIconTextItem.complete{
   border-left: 5px solid grey;
}

hr.blue{
  border: 1px solid $other-blue;
}
/** override bootstrap **/
.span3{
  width: 260px;
}

@media (max-width: 979px){
  .span6 {
    width: 550px;
  }
}


button[type="submit"], input[type="submit"] {
  background-clip: border-box;
  background-color: $blue;
  border-color: transparent;
  color: white;
}

button[type="submit"]:hover, input[type="submit"]:hover {
  background-clip: border-box;
  background-color: $other-blue;
  border-color: transparent;
  color: white;
}

button.win-command {
  background-color: transparent;
  border-color: transparent;
}
button.win-command:hover{
  background-color: transparent;
}
/* Carousel base class */
.carousel {
  margin-bottom: 60px;
}

.carousel .container {
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
}

.carousel-control {
  background-color: transparent;
  border: 0;
  font-size: 120px;
  margin-top: 0;
  text-shadow: 0 1px 1px rgba(0,0,0,.4);
}

.carousel .item {
  height: 500px;
}
.carousel img {
  min-width: 100%;
  height: 500px;
}

.carousel-caption {
  background-color: transparent;
  position: static;
  max-width: 550px;
  padding: 0 20px;
  margin-bottom: 100px;
}
.carousel-caption h1,
.carousel-caption .lead {
  margin: 0;
  line-height: 1.25;
  color: #fff;
  text-shadow: 0 1px 1px rgba(0,0,0,.4);
}
.carousel-caption .btn {
  margin-top: 10px;
}

.category-section{
  margin-top: 30px;
}
.category-section.first{
  margin-top: 0px;
}

.category-section .quiz-tile{
  margin-top: 20px;
  min-height: 250px;
  padding: 10px;
  border: 1px solid white;
  &:hover{
    border: 1px solid $other-blue;
  }
}

.buy-btn{
  background: $other-blue;
  border: 1px solid $other-blue;
  color: white;
  &:hover{
    border: 1px solid $other-blue;
    color: black;
  }
}
footer {
  text-align: center
}


  /* RESPONSIVE CSS
  -------------------------------------------------- */

  @media (max-width: 979px) {

    .container.navbar-wrapper {
      margin-bottom: 0;
      width: auto;
    }
    .navbar-inner {
      border-radius: 0;
      margin: -20px 0;
    }

    .carousel .item {
      height: 500px;
    }
    .carousel img {
      width: auto;
      height: 500px;
    }

    .featurette {
      height: auto;
      padding: 0;
    }
    .featurette-image.pull-left,
    .featurette-image.pull-right {
      display: block;
      float: none;
      max-width: 40%;
      margin: 0 auto 20px;
    }
  }


  @media (max-width: 767px) {

    .navbar-inner {
      margin: -20px;
    }

    .carousel {
      margin-left: -20px;
      margin-right: -20px;
    }
    .carousel .container {

    }
    .carousel .item {
      height: 300px;
    }
    .carousel img {
      height: 300px;
    }
    .carousel-caption {
      width: 65%;
      padding: 0 70px;
      margin-bottom: 40px;
    }
    .carousel-caption h1 {
      font-size: 30px;
    }
    .carousel-caption .lead,
    .carousel-caption .btn {
      font-size: 18px;
    }

    .marketing .span4 + .span4 {
      margin-top: 40px;
    }

    .featurette-heading {
      font-size: 30px;
    }
    .featurette .lead {
      font-size: 18px;
      line-height: 1.5;
    }

  }

